--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -60,7 +60,7 @@ section h3 {
 .activity-card {
   margin-bottom: 15px;
   padding: 15px;
-  border: 1px solid #ddd;
+  border: 1px solid #c41b1b;
   border-radius: 5px;
   background-color: #f9f9f9;
 }
